[package]
name = "gpu-writer"
version = "0.1.0"
authors = [
    "Nikolai Kuklin <nickkuklin@gmail.com>",
  ]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
